0.6.7
- Minimize memory usage for batch processing (#108)
- Allow export to flow cytometry standard file format (#54)
- Add "User Defined" Columns for post-processed data (e.g. compensation)
0.6.6
- Hide unimportant data in Info tab (#102)
- Disable/Enable controls dependent on values of other controls (#103)
- Bugfixes:
  - Regression: Error when batch analysis started (#105, #106)
  - Contour error when plot contains no events (#104)
0.6.5
- Sessions are now autosaved every 60s (#97)
- Bugfixes:
  - Loading of sessions with hierarchy children failed (#99)
  - Reduced a memory leak for new analyses that resulted in frequent
    memory errors (should be less frequent now)
0.6.4
- Bugfixes:
  - Batch analysis: Individual measurement parameters not preserved (#96)
  - Legend plot: >9 measurements cannot be displayed in legend at
    the same time. Introduced new config key "Legend Autoscaled" (#91) 
- New filter hierarchy allows to investigate subpopulations (#87, #63)
- dclab
  - Add InertiaRatio and InertiaRatioRaw to tdms files (typo)
0.6.3
- Bugfixes:
  - Regression: Excluded events plotted on top of filtered events (#86)
  - PDF plot export: Scatter inspector event highlighted (#92)
- Implement differential (w.r.t. reservoir) linear-mixed models
  analysis with bootstrapping (#88)
0.6.2
- Add batch filter processing
- Move statistics computation to dclab (0.1.7dev12):
  - New columns: "Flow rate", "%-gated"
- Bugfixes:
  - Windows: Saving session on different drive than data causes ValueError
  - Memory leak: Re-plotting scatter plots (`ControlPanel.OnChangeFilter`)
  - Handle plots where all events are filtered correctly
  - Scatter plots: False filtered events shown in gray
  - dclab (0.1.7dev9): Faulty hashing strategy in
    `RTDC_DataSet.GetDownSampledScatter`
  - dclab:
    - Corrections/additions in definitions (fRT-DC)
0.6.1
- Load session: Allow user to select missing data files (#80)